--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "lavichat",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "express": "3.1.x"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  }
 }
