--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "lavichat",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "2.x.x",
+	"socket.io": "0.9.x"
   },
   "engines": {
     "node": "0.10.x",
