--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lavichat",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.x.x",
+    "express": "3.1.x",
 	"socket.io": "0.9.x"
   },
   "engines": {
