--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.1.x",
-	"socket.io": "0.9.x"
+	"socket.io": "0.9.x",
+	"socketio-file-upload":"x.x.x"
   },
   "engines": {
     "node": "0.10.x",
