--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "dependencies": {
     "express": "3.1.x",
 	"socket.io": "0.9.x",
-	"socketio-file-upload":"x.x.x",
-	"newrelic":"x.x.x"
+	"socketio-file-upload":"x.x.x"
   },
   "engines": {
     "node": "0.10.x",
